syntax = "proto3";
package cluster;
option csharp_namespace = "Proto.Cluster";

import "Proto.Actor/Protos.proto";

message IdentityHandoverRequest {
    uint64 event_id = 1;
    string address = 2;
    repeated Member members=3;
}

message IdentityHandoverResponse {
    repeated TakeOwnership actors = 1;
}



message TakeOwnership {
    actor.PID pid = 1;
    string name = 2;
    string kind = 3;
    uint64 eventId = 4;
}

message GrainRequest {
    int32 method_index = 1;
    bytes message_data = 2;
}

message GrainResponse {
    bytes message_data = 1;
}

message GrainErrorResponse {
    string err = 1;
}



message Member {
    string host=1;
    int32 port=2;
    string id=3;
    repeated string kinds=4;
}

message ClusterTopology {
    uint64 event_id=1;
    repeated Member members=2;
    repeated Member joined=3;
    repeated Member left=4;
    repeated Member banned=5;
}