syntax = "proto3";
package cluster;
option csharp_namespace = "Proto.Cluster.PubSub";

import "Proto.Actor/Protos.proto";
import "Proto.Cluster/Protos.proto";



message SubscriberIdentity {
  oneof Identity {
    actor.PID pid = 1;
    ClusterIdentity cluster_identity = 2;
  }
}

message Subscribers {
  repeated SubscriberIdentity subscribers = 1;
}

message SubscribeRequest {
  SubscriberIdentity subscriber = 1;
}

message SubscribeResponse {

}

message UnsubscribeRequest {
  SubscriberIdentity subscriber = 1;
}

message UnsubscribeResponse {

}

message PublishRequest {
  bytes data = 1;
}

message PublishResponse {}
